# cocogoat

./: .browserslistrc  .env  .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  .npmrc  .prettierignore  .prettierrc.js  .swcrc  1.txt  2.txt  LICENSE  README.md  README_en.md  auto-imports.d.ts  babel.config.js  components.d.ts  index.html  package.json  pnpm-lock.yaml  resources.json  rsw.toml  tsconfig.json  vite.config.js  vite.config.mjs  vite.skel.config.mjs  vue.config.js
.cache/empty/: package.json
.github/workflows/: build-production.yml  build-singlefile.yml
docs/: README.md
lib/@yuehaiteam/cocogoat-lib/: Cargo.toml  README.md
lib/@yuehaiteam/cocogoat-lib-cli/: Cargo.toml  README.md
lib/@yuehaiteam/cocogoat-lib-cli/src/: main.rs
lib/@yuehaiteam/cocogoat-lib/src/: lib.rs
loader/: index.html  loader.scss  loader.ts
patches/: git-repo-info+2.1.1.patch  git-repo-info@2.1.1.patch  vite-plugin-ifdef@1.0.5.patch  vue-scriptx@0.2.7.patch  vue-virtual-scroller+2.0.0-alpha.1.patch  vue-virtual-scroller@2.0.0-alpha.1.patch
public/: index.html
scripts/: InlineChunkHtmlPlugin.js  InlineFaviconHtmlPlugin.js  amos.js  corsWorkerPlugin.js  deleteSourceMapPlugin.js  entrypointJsonPlugin.js  faviconBase64Plugin.js  genereate-json.js  update.mts  vite-dict-compress.ts  vite-external.ts  vite-gzip-assets.ts  vite-ifdef.ts  vite-ignore-nolocal.ts  vite-inline-favicon.ts  vite-singlefile.ts  workermacro.js
src/: App.vue  bus.ts  main.ts  resource-main.ts  resources.ts  shims-vue.d.ts  sw.ts
src/i18n/: index.ts
sw/: index.ts  tsconfig.json
(+172 files in other folders)
