[package]
name = "cocogoat-lib-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cocogoat-lib = { path = "../cocogoat-lib" }
image = { version = "0.24.5", default-features = false, features = [
    "png",
    "jpeg",
] }