[package]
name = "cocogoat-lib"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
image = { version = "0.24.5", default-features = false, features = [] }
wee_alloc = { version = "0.4.5" }
console_error_panic_hook = { version = "0.1.6" }

[profile.release]
opt-level = "s"
lto = true
